examples/good/00-02-global-variables.dog
int c = 0;

void fun(int y) {
    c++;
    yeet(y); // 5
    if (c < 2) {
        fun(y + 1);
    }
    return; // 6
}

fun(5);
yeet(c); // 2