examples/bad/12-01-mismatch-comparison.dog
yeet(([] (int& ctr):void { ctr++; return; }) == ([] (int& ctr):void { ctr++; return; }));